# personal-ai-assistant

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.sh
src/my_agent/: chat_context_manager.py  my_agent.py
src/my_agent/tools/: tool.py  web_search_tool.py
